now working: save links via share extension

--- a/ShareExtension/Info.plist
+++ b/ShareExtension/Info.plist
@@ -26,6 +26,8 @@
 	<dict>
 		<key>NSExtensionAttributes</key>
 		<dict>
+			<key>NSExtensionActivationSupportsImageWithMaxCount</key>
+			<integer>0</integer>
 			<key>NSExtensionActivationRule</key>
 			<string>TRUEPREDICATE</string>
 			<key>NSExtensionPointName</key>
